k8s/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: cookbookapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      imagePullSecrets:
        - name: dockerhub-creds
      containers:
        - name: web
          image: walaska/cookbookapp:web
          ports:
            - containerPort: 3000
